Adding iterators project

--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,34 @@
   <artifactId>unmei</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Collection of utility code and classes for wide reuse</name>
+  <packaging>pom</packaging>
+  <modules>
+  	<module>unmei-iterators</module>
+  </modules>
+  
+  <dependencyManagement>
+    <dependencies>
+        <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <version>4.12</version>
+           <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>slf4j-api</artifactId>
+	        <version>1.7.25</version>
+	    </dependency>
+        
+        <dependency>
+	        <groupId>com.google.guava</groupId>
+	        <artifactId>guava</artifactId>
+	        <version>23.0</version>
+	    </dependency>
+        
+    </dependencies>
+  
+  </dependencyManagement>
+  
 </project>
