--- a/unmei-nlp/pom.xml
+++ b/unmei-nlp/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>edu.cmu</groupId>
-    <artifactId>mirai</artifactId>
+    <groupId>com.arunge</groupId>
+    <artifactId>unmei</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>nlp</artifactId>
+  <artifactId>unmei-nlp</artifactId>
   
   <dependencies>
       <!-- http://fastutil.di.unimi.it/ -->
@@ -52,7 +52,6 @@
     <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>23.0</version>
     </dependency>
     
     <!-- Logging dependencies -->
