Added ml project. Added a separate class for easily performing filtered tokenization

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
   	<module>unmei-iterators</module>
   	<module>unmei-nlp</module>
+  	<module>unmei-ml</module>
   </modules>
    <build>
     <plugins>
