--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>arunge-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
+    <scm>
+    <connection>scm:git:git@github.com:AJRunge523/unmei.git</connection>
+  </scm>
+  
   <modules>
   	<module>unmei-iterators</module>
   	<module>unmei-nlp</module>
@@ -22,6 +26,10 @@
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
+      </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
       </plugin>
     </plugins>
    </build>
