--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.arunge</groupId>
     <artifactId>arunge-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
     <scm>
     <connection>scm:git:git@github.com:AJRunge523/unmei.git</connection>
