--- a/unmei-iterators/pom.xml
+++ b/unmei-iterators/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.arunge</groupId>
     <artifactId>unmei</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
   <artifactId>unmei-iterators</artifactId>
   
