--- a/unmei-nlp/pom.xml
+++ b/unmei-nlp/pom.xml
@@ -54,8 +54,15 @@
         <artifactId>guava</artifactId>
     </dependency>
     
-    <!-- Logging dependencies -->
+    <!-- https://mvnrepository.com/artifact/org.apache.opennlp/opennlp-tools -->
+	<dependency>
+	    <groupId>org.apache.opennlp</groupId>
+	    <artifactId>opennlp-tools</artifactId>
+	    <version>1.8.4</version>
+	</dependency>
     
+    
+    <!-- Logging dependencies -->
     <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
