--- a/unmei-nlp/pom.xml
+++ b/unmei-nlp/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.arunge</groupId>
     <artifactId>unmei</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
   </parent>
   <artifactId>unmei-nlp</artifactId>
   
@@ -83,9 +83,34 @@
     
     <!-- Test dependencies -->
     <dependency>
-       <groupId>junit</groupId>
-       <artifactId>junit</artifactId>
+       <groupId>org.junit.jupiter</groupId>
+       <artifactId>junit-jupiter-api</artifactId>
+       <version>5.2.0</version>
     </dependency>
+    <dependency>
+	    <groupId>org.junit.jupiter</groupId>
+	    <artifactId>junit-jupiter-engine</artifactId>
+	    <version>5.2.0</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>org.junit.vintage</groupId>
+	    <artifactId>junit-vintage-engine</artifactId>
+	    <version>5.2.0</version>
+	    <scope>test</scope>
+	    </dependency>
+	<dependency>
+	    <groupId>org.junit.platform</groupId>
+	    <artifactId>junit-platform-launcher</artifactId>
+	    <version>1.2.0</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>org.junit.platform</groupId>
+	    <artifactId>junit-platform-runner</artifactId>
+	    <version>1.2.0</version>
+	    <scope>test</scope>
+	</dependency>
   </dependencies>
   
 </project>
